--- a/style.css
+++ b/style.css
@@ -20,12 +20,18 @@ body {
 header {
     font-size: 30px;
     padding: 20px; /* Added 20 pixels of padding */
-    
+    border: 8px solid grey;
+    margin: 1%;
 }
 p {
  font-size: 20px;
 }
 h3 {
     font-size: 30px;
+}
+.summary, .preamble, .explanation, .participation, .benefits, .requirements, .sidebar, footer {
+    padding: 10px;
+    border: 8px solid grey;
+    margin: 1%;
 }
 
