Italic font style

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
     font-family: 'Noto Serif', serif;
     background-color: black;
     color: rgb(34, 34, 185);
+    font-style: italic;
 }
 header {
     font-size: 30px;
