changed display of a

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 */
 a {
     color: white;
-    display: block;
+    display: inline-block;
     padding: 10px 15px;
     border-radius: 5px;
     font-weight: bold;
