--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 */
 a {
     color: white; /* Set color of the links to white */
-    display: inline-block;
+    display: inline-block; /* Set display to inline-block */
     padding: 10px 15px; /* Added padding to the links */
     border-radius: 5px; /* Added border radius to round the corner of the links  */
     font-weight: bold; /* Made the text bold */
