--- a/style2.css
+++ b/style2.css
@@ -6,11 +6,31 @@
 */
 a {
     color: lightgrey;
-    display: block;
+    display: inline;
     font-weight: bold;
+    padding: 5px;
+}
+a:hover {
+    background-color: black;
+    border-radius: 10px;
+    
 }
 body {
     background-color: grey;
     font-family: 'Roboto Condensed', sans-serif;
     color: darkred;
+    line-height: 1.2;
+}
+header {
+    font-size: 40px;
+    padding: 20px;
+    text-align: center;
+}
+p {
+    font-size: 25px;
+    font-weight: bold;
+    padding-bottom: 5px;
+}
+h3 {
+    font-size: 40px;
 }
