--- a/style2.css
+++ b/style2.css
@@ -9,6 +9,7 @@ a {
     display: inline;
     font-weight: bold;
     padding: 5px;
+    transition: background-color 0.3s ease, border-radius 0.3s ease;
 }
 a:hover {
     background-color: black;
@@ -25,12 +26,46 @@ header {
     font-size: 40px;
     padding: 20px;
     text-align: center;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 p {
     font-size: 25px;
     font-weight: bold;
     padding-bottom: 5px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 h3 {
     font-size: 40px;
+}
+.intro, .preamble, .main.supporting, .sidebar {
+    padding: 20px;
+    margin-bottom: 20px;
+    border: 2px solid darkred;
+    border-radius: 10px;
+}
+.page-wrapper::after {
+    content: "";
+    display: table;
+    clear: both;
+}
+.wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: space-between;
+}
+.design-selection, .design-archives, .zen-resources {
+    background-color: #2c2c2c;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    flex: 1 1 calc(33% - 40px);
+}
+.design-selection ul, .design-archives ul, .zen-resources ul {
+    list-style: none;
+    padding: 0;
+}
+.design-selection ul li, .design-archives ul li, .zen-resources ul li {
+    margin-bottom: 15px;
+    font-size: 25px;
 }
