--- a/style2.css
+++ b/style2.css
@@ -34,6 +34,9 @@ p {
     padding-bottom: 5px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
+p::first-letter {
+    font-size: 115%;
+}
 h3 {
     font-size: 40px;
 }
@@ -68,4 +71,7 @@ h3 {
 .design-selection ul li, .design-archives ul li, .zen-resources ul li {
     margin-bottom: 15px;
     font-size: 25px;
+}
+footer {
+    text-align: center;
 }
