--- a/style2.css
+++ b/style2.css
@@ -32,6 +32,7 @@ p {
     font-weight: bold; /* Set the font weight to bold */
     padding-bottom: 5px; /* Added 5px of padding to the bottom */
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Added Box shadow for depth */
+    text-indent: 1.2em; /* Added Text indent to the first line of every paragraph */
 }
 p::first-letter {
     font-size: 115%; /* Increased the first letter font size to the first letter of p */
